@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.312 2009/08/06 04:45:34 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.313 2009/08/28 15:30:47 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -1036,7 +1036,9 @@ boundary(struct curve_points *plots, int count)
 	    projection = -sin((double)axis_array[FIRST_X_AXIS].tic_rotate*DEG2RAD);
 	widest_tic_strlen = 0;		/* reset the global variable ... */
 	gen_tics(FIRST_X_AXIS, /* 0, */ widest_tic_callback);
-	plot_bounds.ybot -= xtic_textheight;
+
+	if (bmargin.x < 0)
+	    plot_bounds.ybot -= xtic_textheight;
 	if (projection > 0.0)
 	    xtic_textheight = (int) (t->h_char * widest_tic_strlen) * projection
 			    + t->v_char;
